--- a/index.html
+++ b/index.html
@@ -165,6 +165,6 @@
       </nav>
     </main>
     <script src="words.js"></script>
-    <script src="index.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
