--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             <th><input maxlength="1" onkeypress="return /[a-z]/i.test(event.key)" type="text" name="" value="" id="cell-5-24"></th>
           </tr>
           <tr id="row-6">
+            <!-- BUG: Fix row-6 ids-->
             <th><input maxlength="1" onkeypress="return /[a-z]/i.test(event.key)" type="text" name="" value="" id="cell-5-25"></th>
             <th><input maxlength="1" onkeypress="return /[a-z]/i.test(event.key)" type="text" name="" value="" id="cell-5-26"></th>
             <th><input maxlength="1" onkeypress="return /[a-z]/i.test(event.key)" type="text" name="" value="" id="cell-5-27"></th>
