Fix row-6 IDs and add keys class

--- a/index.html
+++ b/index.html
@@ -17,48 +17,48 @@
     <main>
       <section id="key-section">
         <p>
-          <span id="key-a">a</span>
-          <span id="key-b">b</span>
-          <span id="key-c">c</span>
+          <span class="keys" id="key-a">a</span>
+          <span class="keys" id="key-b">b</span>
+          <span class="keys" id="key-c">c</span>
         </p>
         <p>
-          <span id="key-d">d</span>
-          <span id="key-e">e</span>
-          <span id="key-f">f</span>
+          <span class="keys" id="key-d">d</span>
+          <span class="keys" id="key-e">e</span>
+          <span class="keys" id="key-f">f</span>
         </p>
         <p>
-          <span id="key-g">g</span>
-          <span id="key-h">h</span>
-          <span id="key-i">i</span>
+          <span class="keys" id="key-g">g</span>
+          <span class="keys" id="key-h">h</span>
+          <span class="keys" id="key-i">i</span>
         </p>
         <p>
-          <span id="key-j">j</span>
-          <span id="key-k">k</span>
-          <span id="key-l">l</span>
+          <span class="keys" id="key-j">j</span>
+          <span class="keys" id="key-k">k</span>
+          <span class="keys" id="key-l">l</span>
         </p>
         <p>
-          <span id="key-m">m</span>
-          <span id="key-n">n</span>
-          <span id="key-o">o</span>
+          <span class="keys" id="key-m">m</span>
+          <span class="keys" id="key-n">n</span>
+          <span class="keys" id="key-o">o</span>
         </p>
         <p>
-          <span id="key-p">p</span>
-          <span id="key-q">q</span>
-          <span id="key-r">r</span>
+          <span class="keys" id="key-p">p</span>
+          <span class="keys" id="key-q">q</span>
+          <span class="keys" id="key-r">r</span>
         </p>
         <p>
-          <span id="key-s">s</span>
-          <span id="key-t">t</span>
-          <span id="key-u">u</span>
+          <span class="keys" id="key-s">s</span>
+          <span class="keys" id="key-t">t</span>
+          <span class="keys" id="key-u">u</span>
         </p>
         <p>
-          <span id="key-v">v</span>
-          <span id="key-w">w</span>
-          <span id="key-x">x</span>
+          <span class="keys" id="key-v">v</span>
+          <span class="keys" id="key-w">w</span>
+          <span class="keys" id="key-x">x</span>
         </p>
         <p>
-          <span id="key-y">y</span>
-          <span id="key-z">z</span>
+          <span class="keys" id="key-y">y</span>
+          <span class="keys" id="key-z">z</span>
         </p>
       </section>
       <section id="game-section">
@@ -99,12 +99,11 @@
             <th><input maxlength="1" onkeypress="return /[a-z]/i.test(event.key)" type="text" name="" value="" id="cell-5-24"></th>
           </tr>
           <tr id="row-6">
-            <!-- BUG: Fix row-6 ids-->
-            <th><input maxlength="1" onkeypress="return /[a-z]/i.test(event.key)" type="text" name="" value="" id="cell-5-25"></th>
-            <th><input maxlength="1" onkeypress="return /[a-z]/i.test(event.key)" type="text" name="" value="" id="cell-5-26"></th>
-            <th><input maxlength="1" onkeypress="return /[a-z]/i.test(event.key)" type="text" name="" value="" id="cell-5-27"></th>
-            <th><input maxlength="1" onkeypress="return /[a-z]/i.test(event.key)" type="text" name="" value="" id="cell-5-28"></th>
-            <th><input maxlength="1" onkeypress="return /[a-z]/i.test(event.key)" type="text" name="" value="" id="cell-5-29"></th>
+            <th><input maxlength="1" onkeypress="return /[a-z]/i.test(event.key)" type="text" name="" value="" id="cell-6-25"></th>
+            <th><input maxlength="1" onkeypress="return /[a-z]/i.test(event.key)" type="text" name="" value="" id="cell-6-26"></th>
+            <th><input maxlength="1" onkeypress="return /[a-z]/i.test(event.key)" type="text" name="" value="" id="cell-6-27"></th>
+            <th><input maxlength="1" onkeypress="return /[a-z]/i.test(event.key)" type="text" name="" value="" id="cell-6-28"></th>
+            <th><input maxlength="1" onkeypress="return /[a-z]/i.test(event.key)" type="text" name="" value="" id="cell-6-29"></th>
           </tr>
         </table>
         <div class="inline">
